@@ -2,6 +2,8 @@ INCLUDES = 					\
 	@KDRIVE_INCS@				\
 	@KDRIVE_CFLAGS@
 
+AM_CFLAGS =	-DHAVE_DIX_CONFIG_H
+
 noinst_LIBRARIES = libkdrive.a libkdrivestubs.a
 
 if KDRIVE_HW
